--- a/easyvote/pom.xml
+++ b/easyvote/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>javafx-controls</artifactId>
             <version>12.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>12.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -35,7 +41,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <mainClass>hellofx/org.openjfx.App</mainClass>
+                    <mainClass>easyvote/org.openjfx.App</mainClass>
                 </configuration>
             </plugin>
         </plugins>
