--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,21 @@
 			<version>20180813</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.websocket</groupId>
+    		<artifactId>javax.websocket-api</artifactId>
+    		<version>1.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.glassfish.tyrus</groupId>
+    		<artifactId>tyrus-container-grizzly</artifactId>
+    		<version>1.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.glassfish.tyrus</groupId>
+    		<artifactId>tyrus-server</artifactId>
+    		<version>1.15</version>
+		</dependency>
+		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
 			<version>12.0.2</version>
