--- a/pom.xml
+++ b/pom.xml
@@ -17,21 +17,21 @@
 			<artifactId>json</artifactId>
 			<version>20180813</version>
 		</dependency>
-		<dependency>
-			<groupId>javax.websocket</groupId>
-    		<artifactId>javax.websocket-api</artifactId>
-    		<version>1.1</version>
-		</dependency>
-		<dependency>
-    		<groupId>org.glassfish.tyrus</groupId>
-    		<artifactId>tyrus-container-grizzly</artifactId>
-    		<version>1.1</version>
-		</dependency>
-		<dependency>
-    		<groupId>org.glassfish.tyrus</groupId>
-    		<artifactId>tyrus-server</artifactId>
-    		<version>1.15</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>javax.websocket</groupId>-->
+    		<!--<artifactId>javax.websocket-api</artifactId>-->
+    		<!--<version>1.1</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+    		<!--<groupId>org.glassfish.tyrus</groupId>-->
+    		<!--<artifactId>tyrus-container-grizzly</artifactId>-->
+    		<!--<version>1.1</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+    		<!--<groupId>org.glassfish.tyrus</groupId>-->
+    		<!--<artifactId>tyrus-server</artifactId>-->
+    		<!--<version>1.15</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
